Feature/metadata signing (#1)
* Added signature verifier

* Require public-key for verification of the digital-signature of metadata

* Verify metadata signature and only propagate metadata when signature is present and valid.

* Added default keystore for testing. This must be overridden in production.